vlib/v/checker/tests/struct_cast_to_struct_mut_err_a.vv
struct Abc {
mut:
	name string
}

struct Xyz {
	name string
}

fn main() {
	abc := Abc{}
	_ := Xyz(abc)
}
